accept_ns1_connection.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: accept-from-ns1-and-default
  namespace: ns-2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ns-1
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  ports:
  - protocol: TCP
    port: 80
